REGRESSION (r275227): Check boxes on V-Safe site flicker when selected https://bugs.webkit.org/show_bug.cgi?id=226549 <rdar://problem/77722651>

Reviewed by Simon Fraser.

Source/WebCore:

When checking equality for StyleCachedImage, check whether the backing CSSImageValue is equal even if the pointer is different.

Test: webanimations/background-image-css-variable-no-transition.html

* rendering/style/StyleCachedImage.cpp:
(WebCore::StyleCachedImage::operator== const):

LayoutTests:

Check that a background-image set to a CSS variable doesn't yield a transition when another style property changes.

* webanimations/background-image-css-variable-no-transition-expected.txt: Added.
* webanimations/background-image-css-variable-no-transition.html: Added.
* webanimations/empty-keyframes-crash.html: motify this existing test which relie on the buggy behavior to trigger
a transition.


Canonical link: https://commits.webkit.org/238403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278376 268f45cc-cd09-0410-ab3c-d52691b4dbfc